# AnyaTelegrammbotAI

./: .env.example  .gitignore  Makefile  main.py  pyproject.toml
database/: config.py
